internal/lang/testdata/conformance/reject/legacy_metadata.gwdk
// expect: malformed_legacy_metadata
package pages

@page Home

route "/"

view {
  <main></main>
}
